# EulerRender

./: .gitignore  CMakeLists.txt  EulerRender.sln  LICENSE  README.md
EulerRender/: CMakeLists.txt  EulerRender.vcxproj
EulerRender/src/: API.h  Application.cpp  Application.h  Euler.h
EulerRender/src/graphics/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshMaterial.cpp  MeshMaterial.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
EulerRender/src/graphics/primitives/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
EulerRender/src/graphics/shaders/: BasicShader.h  WorldShader.h
EulerRender/src/input/: GLFWInputHandler.cpp  GLFWInputHandler.h  Input.cpp  Input.h  InputHandler.h  Key.h
EulerRender/src/math/: Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  Transformation.cpp  Transformation.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
EulerRender/src/resources/: Disposable.h  Resources.cpp  Resources.h
EulerRender/src/scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  FreeCamera.cpp  FreeCamera.h  Scene.cpp  Scene.h  WorldModel.cpp  WorldModel.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  main.cpp
Sandbox/nanosuit/: nanosuit.blend
Sandbox/resources/man/: GTP_BMan_Jack_07_Stg_Lsn_Adl_Ccs_Gry_Mgr.mtl
include/assimp/: config.h
libs/Debug/: glfw3.lib
libs/Release/: assimp-vc140-mt.lib  glfw3.lib
